test/deca/context/invalid/2_5_name_avant_type.deca
// Description:
//    nom du field avant son type
//
// Resultats:
//    Ligne 8

class A {
  a int;
}
